# Computer-Graphics

./: .gitignore  CMakeLists.txt  README.md
A1/: .gitignore
A1/examples/: e4.cpp
A2/: .gitignore  README.md
A2/src/: Create_file.cpp  parser.cpp
A4/: .gitignore
A4/executables/: part1.cpp
A4/src/: hw.cpp  hw.hpp
examples/: clock.cpp  scenes.cpp
executables/: part2.cpp  part3.cpp
src/: example.cpp  hw.cpp  hw.hpp  sw.cpp  sw.hpp  viewer.cpp  viewer.hpp
